Fix dtos and add transactions